vivi.core changes
=================

4.50.7 (unreleased)
-------------------

- ZON-6377: Fix rendering of teaser images with `fill_color=None` parameters


4.50.6 (2021-04-21)
-------------------

- ZON-6614: Support caching time attribute on centerpages


4.50.5 (2021-04-08)
-------------------

- STO-185: Cache content & DAV properties based on file modification times


4.50.4 (2021-04-07)
-------------------

- ZON-6573: Support legal_text attribute on newslettersignups


4.50.3 (2021-03-30)
-------------------

- OPS-1684: Avoid zero division on image ratio calculations

- FIX: Ignore XML comments when parsing article modules


4.50.2 (2021-03-22)
-------------------

- ZON-6478: Follow up, refactor existing_teasers attribute for CP ContentQueries


4.50.1 (2021-03-17)
-------------------

- ZON-6521: Support theme in liveblogs


4.50.0 (2021-03-16)
-------------------

- ZON-6478: Move content query functionality to its own module

- BUG-1250: Hide no more needed 'external' author checkbox


4.49.2 (2021-03-10)
-------------------

- BUG-1366: Make sorting volume listings work again for py3


4.49.1 (2021-03-10)
-------------------

- ZON-6346: Make tickaroo liveblog status required

- BUG-1311: Show "steal lock" button only if user has the required permission

- BUG-1366: Make sorting listings work again for py3


4.49.0 (2021-02-24)
-------------------

- MAINT: Add status code to retresco TechnicalError


4.48.8 (2021-02-10)
-------------------

- ZON-6383: Handle Markdown using python libraries

- ZON-6346: Add article module for tickaroo liveblog


4.48.7 (2021-02-01)
-------------------

- ZON-6275: Urbanairship open channel support


4.48.6 (2021-01-29)
-------------------

- ZETT-98: Provide social channels facebook and twitter for zett


4.48.5 (2021-01-25)
-------------------

- STO-179: Handle changed "total hits" ES search API response


4.48.4 (2021-01-21)
-------------------

- STO-179: Remove overspecific `type` restriction from ES queries

